Add test scripts for backend endpoints in PowerShell and Bash, enhance logging in PrimeWrapsApplication, and introduce new test endpoints in AuthController and ContactController for improved accessibility verification.